@@ -86,10 +86,17 @@ private:
     };
 
 public:
-    static SmeConfig readSmeConfig( ConfigView& config ); // throw ConfigException
+    struct SmscConfig {
+        SmscConfig() : ussdPushOp(-1), ussdPushVlrOp(-1) {}
+        smsc::sme::SmeConfig smeConfig;
+        int ussdPushOp;
+        int ussdPushVlrOp;
+    };
+
+    static SmscConfig readSmeConfig( ConfigView& config ); // throw ConfigException
 
     SmscConnector(TaskProcessor& processor,
-                  const smsc::sme::SmeConfig& cfg,
+                  const SmscConfig& cfg,
                   const string& smscId,
                   bool doPerformanceTests = false );
     virtual ~SmscConnector();
@@ -97,7 +104,7 @@ public:
     void start();
     void stop();
     void reconnect();
-    void updateConfig( const smsc::sme::SmeConfig& config );
+    void updateConfig( const SmscConfig& config );
     bool isStopped() const;
     int getSeqNum();
     uint32_t sendSms(const string& org, const string& dst, const string& txt, bool flash);
